scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/AssrtCoreTest10d.scr
module good.extensions.assrtcore.safety.assrtprog.AssrtCoreTest10d;


type <java> "java.lang.Integer" from "rt.jar" as int;


//*
global protocol Proto1(role B, role S) @"[x: int = 3]"
{
	1(y:int) from B to S; @"(y>3)"
	choice at S
	{
		2() from S to B; @"(y>5)"  // Not assert-prog, but sat
		do Proto1(B, S); @"[y]"  // y doesn't matter, x not used
	}
	or
	{
		4() from S to B;
	}
}
//*/
