scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/unsat/AssrtCoreTest10d.scr
module bad.extensions.assrtcore.safety.unsat.AssrtCoreTest10d;


type <java> "java.lang.Integer" from "rt.jar" as int;


//*
global protocol Proto1(role B, role S) @"[x: int = 3]"
{
	1(y:int) from B to S; @"(y>3)"
	choice at S
	{
		2() from S to B; @"False"
		do Proto1(B, S); @"[y]"
	}
	or
	{
		4() from S to B;
	}
}
//*/
